<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Asteroides</string>
    <string name="start">Jugar</string>
    <string name="config">Config</string>
    <string name="about">"Sobre..."</string>
    <string name="exit">Salir</string>
    <string name="action_settings">Settings</string>
    <string name="puntuaciones">Score</string>


    <string name="snackbar_text_max_fragmentos">"Maximum of fragments 9"</string>
    <string name="snackbar_text_error">"Error, must be a number"</string>
    <string name="aceptar">Ok</string>
</resources>