<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    android:background="#000000">

    <TextView
        style="@style/textoAsteroides"
        android:textSize="25sp"
        android:text="@string/app_name"/>

    <Button
        style="@style/textoAsteroides.Botones"
        android:id="@+id/button_start"
        android:text="@string/start"/>

    <Button
        style="@style/textoAsteroides.Botones"
        android:id="@+id/button_config"
        android:text="@string/config"/>

    <Button
        style="@style/textoAsteroides.Botones"
        android:id="@+id/button_about"
        android:text="@string/about"
        android:onClick="lanzarAcercaDe" />

    <Button
        style="@style/textoAsteroides.Botones"
        android:id="@+id/button_exit"
        android:text="@string/exit"/>

</LinearLayout>