<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    tools:context="com.rafaels.asteroides.MainActivity">

    <TextView
        style="@style/textoAsteroides"
        android:textSize="25sp"
        android:text="@string/app_name"/>

    <Button
        style="@style/textoAsteroides.Botones"
        android:id="@+id/Button01"
        android:text="@string/start"/>

    <Button
        style="@style/textoAsteroides.Botones"
        android:id="@+id/Button02"
        android:text="@string/config"/>

    <Button
        style="@style/textoAsteroides.Botones"
        android:id="@+id/Button03"
        android:text="@string/about"/>

    <Button
        style="@style/textoAsteroides.Botones"
        android:id="@+id/Button04"
        android:text="@string/exit"/>

</LinearLayout>
